--- a/css/styles.css
+++ b/css/styles.css
@@ -365,7 +365,7 @@ nav li.active a {
   background-color: #531b1b;
   color: white;
   border-radius: 5px;
-  margin: 10px 5px;
+  margin: 10px 1rem;
 }
 nav a {
   display: block;
@@ -376,13 +376,36 @@ nav a {
   font-weight: 600;
 }
 nav a:hover {
-  background-color: rgb(206, 206, 206);
   color: black;
+}
+
+h1 {
+  margin-left: 1rem;
 }
 
 div.imageParent {
   display: grid;
   grid-template-columns: 1fr;
+}
+
+div.card {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  text-align: center;
+  margin: 1rem;
+}
+div.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 7px 7px 0 0;
+}
+div.card p {
+  margin: 0;
+  padding: 0.5rem;
+  background-color: rgb(206, 206, 206);
+  border-radius: 0 0 7px 7px;
+  border: none;
 }
 
 #footerWrapper {
@@ -411,10 +434,30 @@ footer p {
     display: flex;
     flex-direction: row;
   }
+  nav li.active a {
+    background-color: #531b1b;
+    color: white;
+    border-radius: 5px;
+    margin: 4px;
+  }
+  nav a {
+    margin: 4px;
+  }
+  div.imageParent {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 @media only screen and (min-width: 60rem) {
   header, nav, main {
-    max-width: 60rem;
+    max-width: 75rem;
     margin: auto;
+  }
+  div.imageParent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  div.card p {
+    font-size: 1.2rem;
   }
 }
