--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -84,7 +84,8 @@ h1 {
 
 div.imageParent {
     display: grid;
-    grid-template-columns: 1fr, min(100px);
+    grid-template-columns: 1fr;
+    min-width: 100px;
 }
 
 
